# argusterm

./: Cargo.toml  README.md
config/: argusterm.eg.toml
prompts/: extract_ids.j2  extract_ids_schema.json  pick_ref.j2  pick_ref_schema.json
src/: db.rs  doomflame.rs  main.rs  state.rs
src/feeds/: mod.rs
src/filters/: mod.rs
src/llm/: mod.rs
src/tui/: mod.rs
